[gd_scene load_steps=10 format=3 uid="uid://rxypcdwynxhf"]

[ext_resource type="PackedScene" uid="uid://d3n5it14asxwy" path="res://scene/player.tscn" id="1_5kiuu"]
[ext_resource type="Script" uid="uid://c6sfaeaisk3dk" path="res://scripts/MatchManager.gd" id="1_xlg7c"]
[ext_resource type="PackedScene" uid="uid://ggh8aj0hjo8c" path="res://scene/ball.tscn" id="2_dbls1"]
[ext_resource type="PackedScene" uid="uid://b5yitep8dnp3b" path="res://scene/wall.tscn" id="3_xwcet"]
[ext_resource type="PackedScene" uid="uid://gmop72psdes3" path="res://scene/opponent.tscn" id="4_p1ry8"]
[ext_resource type="PackedScene" uid="uid://53qm2lal2d28" path="res://scene/goal.tscn" id="5_p1ry8"]
[ext_resource type="PackedScene" uid="uid://bdapcr4hw5jg2" path="res://scene/pause_manager.tscn" id="7_qpk70"]
[ext_resource type="Script" uid="uid://dkjrvqfm5t1pe" path="res://scripts/win_screen.gd" id="8_ll5lq"]
[ext_resource type="Script" uid="uid://cmjtdqte45kff" path="res://scene/powerup_manager.gd" id="9_17rxn"]

[node name="MatchManager" type="Node"]
script = ExtResource("1_xlg7c")
ball_scene = ExtResource("2_dbls1")
ball_speed = 20.0

[node name="HalfLine" type="Node2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.16, 18.16)

[node name="ColorRect" type="ColorRect" parent="HalfLine"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.694118, 0.698039, 0.709804, 1)

[node name="PointLabels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftPointLabel" type="Label" parent="PointLabels"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 249.0
offset_top = -293.0
offset_right = 591.0
offset_bottom = 294.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.772549, 0.847059, 0.427451, 1)
theme_override_font_sizes/font_size = 500
text = "4"

[node name="RightPointLabel" type="Label" parent="PointLabels"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -293.5
offset_right = -178.0
offset_bottom = 293.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.772549, 0.847059, 0.427451, 1)
theme_override_font_sizes/font_size = 500
text = "2"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Player" parent="." groups=["players"] instance=ExtResource("1_5kiuu")]
position = Vector2(50, 360)

[node name="Opponent" parent="." groups=["players"] instance=ExtResource("4_p1ry8")]
position = Vector2(1230, 360)
difficulty = 2

[node name="Walls" type="Node" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource("3_xwcet")]
position = Vector2(633, 720)

[node name="Wall2" parent="Walls" instance=ExtResource("3_xwcet")]
position = Vector2(633, 0)
rotation = -3.14159

[node name="LeftGoal" parent="." instance=ExtResource("5_p1ry8")]
rotation = 1.5708

[node name="RightGoal" parent="." instance=ExtResource("5_p1ry8")]
position = Vector2(1279, 310)
rotation = -1.5708

[node name="Timers" type="Node" parent="."]

[node name="RespawnBallTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true
ignore_time_scale = true

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
process_mode = 3

[node name="PauseManager" parent="." instance=ExtResource("7_qpk70")]

[node name="PauseMenu" type="VBoxContainer" parent="PauseManager"]
visible = false
z_index = 100
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -49.5
offset_right = 104.0
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2

[node name="Pause" type="Label" parent="PauseManager/PauseMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="PauseManager/PauseMenu"]
layout_mode = 2
text = "Continue"

[node name="RestartButton" type="Button" parent="PauseManager/PauseMenu"]
layout_mode = 2
text = "Restart"

[node name="ExitButton" type="Button" parent="PauseManager/PauseMenu"]
layout_mode = 2
text = "Exit"

[node name="WinScreen" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_ll5lq")

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinLabel" type="Label" parent="WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "XXX wins"

[node name="RestartButton" type="Button" parent="WinScreen/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="ExitButton" type="Button" parent="WinScreen/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="PowerupManager" type="Node" parent="."]
script = ExtResource("9_17rxn")
MAX_SPAWN_INTERVAL = 10.0

[connection signal="body_entered" from="LeftGoal" to="." method="_on_left_goal_body_entered"]
[connection signal="body_entered" from="RightGoal" to="." method="_on_right_goal_body_entered"]
[connection signal="timeout" from="Timers/RespawnBallTimer" to="." method="_on_respawn_ball_timer_timeout"]
[connection signal="button_down" from="PauseManager/PauseMenu/ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="button_down" from="PauseManager/PauseMenu/RestartButton" to="." method="_on_restart_button_button_down"]
[connection signal="button_down" from="PauseManager/PauseMenu/ExitButton" to="." method="_on_exit_button_button_down"]
[connection signal="button_down" from="WinScreen/VBoxContainer/RestartButton" to="." method="_on_restart_button_button_down"]
[connection signal="button_down" from="WinScreen/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_down"]
